log/build_2024-12-15_01-34-23/frontier_explorer/stderr.log
  File "/home/quim/robotica_ros/P_final/install/frontier_explorer/lib/python3.10/site-packages/frontier_explorer/explorer.py", line 188
    rclpy.time.Time()
    ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

